--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<html><body>
+<html>
+  <head>
+    <title> my wonderful title </title>
+    <head>
+  <body>
 Hello there, awesome person!
   </body> </html>
     
