--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> my wonderful title </title>
-    <head>
+    </head>
   <body>
 Hello there, awesome person!
   </body> </html>
