--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <h1> Spurs 3, Chelsea 1 </h1>
 Hello there, awesome person!
     <img src="https://octodex.github.com/images/vinyltocat.png"></img>
+  <ul>
+    <li>Dele</li>
+    <li>Kane</li>
+    <li>Son</li>
+</ul>
   </body> </html>
     
