--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@ Hello there, awesome person!
     <li>Kane</li>
     <li>Son</li>
 </ul>
+  <li><a href="https://github.com">This is a link to GitHub!</a></li>
   </body> </html>
     
