--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> my wonderful title </title>
+    <link rel="stylesheet" href="style.css">
     </head>
   <body>
     <h1> Spurs 3, Chelsea 1 </h1>
